--- a/layout/index.module.css
+++ b/layout/index.module.css
@@ -1,43 +1,26 @@
-.layout{
-    width: 100%;
-    padding: 0 16px;
-    box-shadow: 5px 0 8px #888;
-    background-color: var(--white-color);
+.trigger {
+    padding: 0 24px;
+    font-size: 18px;
+    line-height: 64px;
+    cursor: pointer;
+    transition: color 0.3s;
 }
 
-.topbar {
-    margin: auto 12px;
-    position: relative;
-    width: 100%;
-    height: 56px;
-    display: flex;
-    align-items: center;
+.trigger:hover {
+    color: #1890ff;
 }
 
-.container {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.title {
-    flex: 1 0 80%;
-    height: 100%;
-    font-size: 20px;
+.logo {
+    height: 32px;
+    margin: 16px;
+    color: white;
+    font-size: 16px;
+    padding: 0 8px;
     font-weight: bold;
-}
-
-.list {
-    flex: 1 0 10%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    /*background: rgba(255, 255, 255, 0.3);*/
 }
 
 .logout {
-    flex: 1 0 10%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    float: right;
+    margin-right: 50px;
 }
