--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,3 +10,11 @@
 
     --background-color: #fcfcff;
 }
+
+* {
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
